Product changes and whatsapp button add

--- a/index.html
+++ b/index.html
@@ -153,30 +153,6 @@
               >
                 <picture>
                   <img
-                    src="assets/product1.webp"
-                    alt=""
-                    class="regular__image radius__two"
-                  />
-                </picture>
-
-                <div
-                  class="flex items__center dark__yellow small__gap font__small"
-                >
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                </div>
-
-                <h3 class="font__three font__two green">Nome do produto</h3>
-              </div>
-
-              <div
-                class="flex column items__center two__gap product__container"
-              >
-                <picture>
-                  <img
                     src="assets/product2.webp"
                     alt=""
                     class="regular__image radius__two"
@@ -193,55 +169,7 @@
                   <i class="fas fa-star"></i>
                 </div>
 
-                <h3 class="font__three font__two green">Nome do produto</h3>
-              </div>
-
-              <div
-                class="flex column items__center two__gap product__container"
-              >
-                <picture>
-                  <img
-                    src="assets/product3.webp"
-                    alt=""
-                    class="regular__image radius__two"
-                  />
-                </picture>
-
-                <div
-                  class="flex items__center dark__yellow small__gap font__small"
-                >
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                </div>
-
-                <h3 class="font__three font__two green">Nome do produto</h3>
-              </div>
-
-              <div
-                class="flex column items__center two__gap product__container"
-              >
-                <picture>
-                  <img
-                    src="assets/product4.webp"
-                    alt=""
-                    class="regular__image radius__two"
-                  />
-                </picture>
-
-                <div
-                  class="flex items__center dark__yellow small__gap font__small"
-                >
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                </div>
-
-                <h3 class="font__three font__two green">Nome do produto</h3>
+                <h3 class="font__three font__two green">Açai</h3>
               </div>
 
               <div
@@ -265,7 +193,7 @@
                   <i class="fas fa-star"></i>
                 </div>
 
-                <h3 class="font__three font__two green">Nome do produto</h3>
+                <h3 class="font__three font__two green">Sorvetes</h3>
               </div>
 
               <div
@@ -289,7 +217,55 @@
                   <i class="fas fa-star"></i>
                 </div>
 
-                <h3 class="font__three font__two green">Nome do produto</h3>
+                <h3 class="font__three font__two green">Picolés</h3>
+              </div>
+
+              <div
+                class="flex column items__center two__gap product__container"
+              >
+                <picture>
+                  <img
+                    src="assets/product4.webp"
+                    alt=""
+                    class="regular__image radius__two"
+                  />
+                </picture>
+
+                <div
+                  class="flex items__center dark__yellow small__gap font__small"
+                >
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+
+                <h3 class="font__three font__two green">Caldos</h3>
+              </div>
+
+              <div
+                class="flex column items__center two__gap product__container"
+              >
+                <picture>
+                  <img
+                    src="assets/product7.webp"
+                    alt=""
+                    class="regular__image radius__two"
+                  />
+                </picture>
+
+                <div
+                  class="flex items__center dark__yellow small__gap font__small"
+                >
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+
+                <h3 class="font__three font__two green">Tapiocas</h3>
               </div>
             </div>
 
@@ -302,6 +278,10 @@
 
       <!-- FIXME: Products end  -->
     </main>
+
+    <a href="#">
+      <i class="fab fa-whatsapp"></i>
+    </a>
 
     <script src="js/index.js"></script>
   </body>
