Store images complete

--- a/index.html
+++ b/index.html
@@ -280,6 +280,42 @@
       </section>
 
       <!-- FIXME: About ends -->
+
+      <!-- TODO: Store images start -->
+
+      <section class="section store-section">
+        <div class="store__container flex column five__gap items__center">
+          <h2 class="regular__h green">Nossa loja</h2>
+          <div class="flex column store__content">
+            <picture>
+              <img src="assets/loja1.webp" alt="" />
+            </picture>
+
+            <picture>
+              <img src="assets/loja2.webp" alt="" />
+            </picture>
+
+            <picture>
+              <img src="assets/loja3.webp" alt="" />
+            </picture>
+
+            <picture>
+              <img src="assets/loja4.webp" alt="" class="kids__image" />
+            </picture>
+
+            <picture>
+              <img src="assets/loja5.webp" alt="" />
+            </picture>
+
+            <picture>
+              <img src="assets/loja6.webp" alt="" />
+            </picture>
+          </div>
+          <a href="#" class="button"> conheça nossa loja </a>
+        </div>
+      </section>
+
+      <!-- FIXME: Store images end -->
     </main>
 
     <footer id="contato" class="footer">
