--- a/index.html
+++ b/index.html
@@ -333,7 +333,8 @@
 
             <article class="flex column contact two__gap">
               <h2>Contatos</h2>
-              <p>Telefone: (48) 99610-8288</p>
+              <p>(48) 2132-2525</p>
+              <p class="margin__top__two">(48) 99801-5245</p>
               <a href="#">
                 <i class="fab fa-instagram"></i>
               </a>
